--- a/main.css
+++ b/main.css
@@ -12,7 +12,29 @@ nav {
 }
 
 main {
-	width: 1000px;
+	width: 800px;
 	height: 700px;
+	float: left;
 	background-color: green;
+}
+
+main#index {
+		width: 1000px;
+}
+
+article {
+	display: inline-block;
+	margin-top: 22px;
+	margin-left: 22px;
+	width: 300px;
+	height: 300px;
+	background-color: blue;
+	z-index: 2;
+}
+
+a {
+	text-decoration: none;
+	color: white;
+	vertical-align: middle;
+	text-align: center
 }
